# ARIA

./: README.md  pyproject.toml  requirements.txt
aria/: __init__.py
aria/perception/: __init__.py  nlp_grounding.py  occupancy_map.py  pointnet_backbone.py  scene_graph.py  sensor_fusion.py
aria/production/: __init__.py  export_onnx.py  metrics_exporter.py  tensorrt_engine.py
aria/rl/: __init__.py  rewards.py  train_manip.py  train_nav.py
aria/rl/envs/: __init__.py  manip_env.py  nav_env.py
aria/rl/extractors/: __init__.py  gnn_extractor.py
aria/sim2real/: __init__.py  calibration.py  domain_randomizer.py
configs/: manip_training.yaml  nav_training.yaml  perception.yaml
docker/: Dockerfile.perception  Dockerfile.rl_training  docker-compose.yml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: aria_dashboard.json
ros2_ws/src/aria_ros/: package.xml
ros2_ws/src/aria_ros/aria_ros/: language_node.py  nav_policy_node.py  perception_node.py
ros2_ws/src/aria_ros/config/: aria_params.yaml
ros2_ws/src/aria_ros/launch/: aria_full.launch.py
tests/integration/: test_perception_pipeline.py
tests/unit/: test_gnn_extractor.py  test_occupancy_map.py  test_rewards.py  test_scene_graph.py
