[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aria"
version = "0.1.0"
description = "ARIA — Autonomous Robot Intelligence Architecture: Embodied AI for 3D navigation and manipulation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ARIA Authors" }]
keywords = ["robotics", "embodied-ai", "reinforcement-learning", "3d-vision", "scene-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/aria-robot/aria"

[project.scripts]
aria-train-nav   = "aria.rl.train_nav:main"
aria-train-manip = "aria.rl.train_manip:main"
aria-export      = "aria.production.export_onnx:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aria*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
